service.yml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 443
